@@ -1,3 +1,10 @@
+2012-12-03  Steven Bosscher  <steven@gcc.gnu.org>
+
+	* gcse.c (struct reg_use): Remove unused struct.
+	(gcse_emit_move_after): Do not create REG_EQUAL notes that reference
+	the SET_DEST of the instruction the note would be attached to.
+	* cse.c (cse_main): Add the DF_NOTE problem.
+
 2012-12-03  Jakub Jelinek  <jakub@redhat.com>
 
 	* sanitizer.def: Add Address Sanitizer builtins.
